ACPI Warning: \_SB.PCI0.GP17.VGA.LCD._DDC: Return type mismatch - found Package, expected Integer/Buffer (20240827/nspredef-254)
I get this warning since 6.13.
My Lenovo 14ARB7 returns EDID as a buffer in ACPI package. I wrote a patch that handles the package. Since then it seems like the screen hasn't even flickered, but it is not certain that this is the reason.
DSDT:
Name (AUOP, Package (0x01)
{
Buffer (0x80)
{
...
}
})
...
Method (_DDC, 1, NotSerialized) // _DDC: Display Data Current
{
If ((PAID == AUID))
{
Return (AUOP) /* \_SB_.PCI0.GP17.VGA_.LCD_.AUOP */
}
ElseIf ((PAID == IVID))
{
Return (IVOP) /* \_SB_.PCI0.GP17.VGA_.LCD_.IVOP */
}
ElseIf ((PAID == BOID))
{
Return (BOEP) /* \_SB_.PCI0.GP17.VGA_.LCD_.BOEP */
}
ElseIf ((PAID == SAID))
{
Return (SUNG) /* \_SB_.PCI0.GP17.VGA_.LCD_.SUNG */
}
Return (Zero)
}
old EDID:
edid-decode (hex):
00 ff ff ff ff ff ff 00 4c 83 7a 41 00 00 00 00
23 1e 01 04 b5 1e 13 78 02 0c f1 ae 52 3c b9 23
0c 50 54 00 00 00 01 01 01 01 01 01 01 01 01 01
01 01 01 01 01 01 a4 c3 40 50 b0 08 50 70 08 20
88 00 2e bd 10 00 00 1b a4 c3 40 50 b0 08 fc 73
08 20 88 00 2e bd 10 00 00 1b 00 00 00 0f 00 ff
0a 5a ff 0a 3c 28 80 00 00 00 00 00 00 00 00 fe
00 41 54 4e 41 34 30 59 4b 30 38 2d 30 20 01 79
02 03 0f 00 e3 05 80 00 e6 06 05 01 74 60 07 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 b7
----------------
Block 0, Base EDID:
EDID Structure Version & Revision: 1.4
Vendor & Product Identification:
Manufacturer: SDC
Model: 16762
Made in: week 35 of 2020
Basic Display Parameters & Features:
Digital display
Bits per primary color channel: 10
DisplayPort interface
Maximum image size: 30 cm x 19 cm
Gamma: 2.20
Supported color formats: RGB 4:4:4
First detailed timing includes the native pixel format and preferred refresh rate
Color Characteristics:
Red : 0.6796, 0.3203
Green: 0.2373, 0.7226
Blue : 0.1396, 0.0498
White: 0.3125, 0.3291
Established Timings I & II: none
Standard Timings: none
Detailed Timing Descriptors:
DTD 1: 2880x1800 90.001438 Hz 16:10 169.203 kHz 500.840000 MHz (302 mm x 189 mm)
Hfront 8 Hsync 32 Hback 40 Hpol P
Vfront 8 Vsync 8 Vback 64 Vpol N
DTD 2: 2880x1800 60.000958 Hz 16:10 169.203 kHz 500.840000 MHz (302 mm x 189 mm)
Hfront 8 Hsync 32 Hback 40 Hpol P
Vfront 8 Vsync 8 Vback 1004 Vpol N
Manufacturer-Specified Display Descriptor (0x0f): 00 0f 00 ff 0a 5a ff 0a 3c 28 80 00 00 00 00 00 '.....Z..<(......'
Alphanumeric Data String: 'ATNA40YK08-0 '
Extension blocks: 1
Checksum: 0x79
----------------
Block 1, CTA-861 Extension Block:
Revision: 3
Native detailed modes: 0
Colorimetry Data Block:
BT2020RGB
HDR Static Metadata Data Block:
Electro optical transfer functions:
Traditional gamma - SDR luminance range
SMPTE ST2084
Supported static metadata descriptors:
Static metadata type 1
Desired content max luminance: 116 (616.884 cd/m^2)
Desired content max frame-average luminance: 96 (400.000 cd/m^2)
Desired content min luminance: 7 (0.005 cd/m^2)
Checksum: 0xb7 Unused space in Extension Block: 112 bytes
new EDID:
edid-decode (hex):
00 ff ff ff ff ff ff 00 30 ae 98 8a 00 00 00 00
23 1e 01 04 b5 1e 13 78 02 0c f1 ae 52 3c b9 23
0c 50 54 00 00 00 01 01 01 01 01 01 01 01 01 01
01 01 01 01 01 01 a4 c3 40 50 b0 08 fc 73 08 20
88 00 2e bd 10 00 00 1b a4 c3 40 50 b0 08 50 70
08 20 88 00 2e bd 10 00 00 1b 00 00 00 fe 00 4c
45 4e 4f 56 4f 0a 20 20 20 20 20 20 00 00 00 fe
00 4c 45 4e 31 34 30 57 51 2b 0a 20 20 20 01 27
02 03 0f 00 e3 05 80 00 e6 06 05 01 74 60 07 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 b7
----------------
Block 0, Base EDID:
EDID Structure Version & Revision: 1.4
Vendor & Product Identification:
Manufacturer: LEN
Model: 35480
Made in: week 35 of 2020
Basic Display Parameters & Features:
Digital display
Bits per primary color channel: 10
DisplayPort interface
Maximum image size: 30 cm x 19 cm
Gamma: 2.20
Supported color formats: RGB 4:4:4
First detailed timing includes the native pixel format and preferred refresh rate
Color Characteristics:
Red : 0.6796, 0.3203
Green: 0.2373, 0.7226
Blue : 0.1396, 0.0498
White: 0.3125, 0.3291
Established Timings I & II: none
Standard Timings: none
Detailed Timing Descriptors:
DTD 1: 2880x1800 60.000958 Hz 16:10 169.203 kHz 500.840000 MHz (302 mm x 189 mm)
Hfront 8 Hsync 32 Hback 40 Hpol P
Vfront 8 Vsync 8 Vback 1004 Vpol N
DTD 2: 2880x1800 90.001438 Hz 16:10 169.203 kHz 500.840000 MHz (302 mm x 189 mm)
Hfront 8 Hsync 32 Hback 40 Hpol P
Vfront 8 Vsync 8 Vback 64 Vpol N
Alphanumeric Data String: 'LENOVO'
Alphanumeric Data String: 'LEN140WQ+'
Extension blocks: 1
Checksum: 0x27
----------------
Block 1, CTA-861 Extension Block:
Revision: 3
Native detailed modes: 0
Colorimetry Data Block:
BT2020RGB
HDR Static Metadata Data Block:
Electro optical transfer functions:
Traditional gamma - SDR luminance range
SMPTE ST2084
Supported static metadata descriptors:
Static metadata type 1
Desired content max luminance: 116 (616.884 cd/m^2)
Desired content max frame-average luminance: 96 (400.000 cd/m^2)
Desired content min luminance: 7 (0.005 cd/m^2)
Checksum: 0xb7 Unused space in Extension Block: 112 bytes
0001-ACPI-video-Handle-fetching-EDID-as-ACPI_TYPE_PACKAGE.patch